# datioxyel

./: AGENTS.md  README.md
cobaia/: .gitignore  .yarnrc.yml  AGENTS.md  package.json
cobaia/app/: package.json  tsconfig.json
cobaia/app/src/: render.ts
cobaia/app/src/render/: cli.ts  engine.ts  types.ts  workflow.ts
cobaia/engine/: Cargo.toml
cobaia/engine/src/: config.rs  cpu.rs  gpu.rs  main.rs  math.rs  scene.rs
cobaia/engine/src/domain/: light.rs  material.rs  mod.rs  object.rs  scene.rs
cobaia/engine/src/domain/presets/: menger_glass_dual_light.rs  menger_glass_on_plane.rs  mod.rs  nested_media_aquarium.rs  primitives_gallery.rs  rounded_box_glass_only.rs
cobaia/engine/src/gpu/: scene_compile.rs  shader_source.rs
cobaia/engine/src/render/: capabilities.rs  mod.rs  settings.rs  validation.rs  view.rs
cobaia/engine/src/shaders/: raytrace.wgsl
scripts/: run_parallel_review_baseline.sh  run_parallel_review_baseline_stagger.sh
