[package]
name = "cobaia-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
pollster = "0.3.0"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20.1"
